--- a/src/next/src/styles/styles.scss
+++ b/src/next/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import 'src/components/Renderer/pages/Root/components/society/technologies/TechnologyLessonUser/styles.scss';
+
 html,
 body {
   height: 100%;
