--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,19 @@
+@import '~@prisma-cms/editor/src/styles/less/styles.css';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Roboto, sans-serif, Tahoma, Helvetica;
   font-size: 14px;
+  padding: 0;
+  margin: 0;
+}
+
+#content {
+  margin: 20px 0;
+  padding: 0 16px;
 }
 
 a {
